2021-06-30  Toshihiko Kawano  <kawano@lanl.gov>

	* source/groupstructure.h: updated
	LANL 618 group structure added

2021-05-10  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfr.cpp (gfrPrintCrossSection): modified
	accept XYdataConversion global options

	* source/deceprocgroup.cpp (DeceGenerateGroup): modified
	group ID = -1 stands for arbitrary group structure from external file
	* source/deceprocgroup.cpp (DeceReadGroup): new function
	read group structure from external file

2021-05-04  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/coupling.cpp (clebsh_gordan): new function
	wrapper of the m1+m2 != M case

2021-04-24  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfr.cpp (gfrAngDist): modified
	calculate actual angular distributoins from Legendre coefficients
	when AngleStep is set

2021-04-20  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrformula.cpp (gfrReichMoore): bug fixd
	in the case of channel-spin dependent resonance parameter,
	J=0 was skipped if S=I-1/2

2021-04-12  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/command.cpp (CmdExtractString): modified
	accept both single and double quotation

2021-04-11  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endfio.cpp (ENDFReadMF1): updated
	* source/decetable1.cpp (DeceTableMF1MT458): updated
	energy-dependent fission energy release case added

	* source/deceglobaloption.cpp (optionSet): modified
	warning message added when no file name is given

2021-03-04  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endflib.h: modified
	note on ENDF class added

	* source/decetable10.cpp (DeceTableMF10): bug fixed
	LFS was taken from wrong place and printed

2021-02-18  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decefactor.cpp (DeceFactorMF4P1): new function
	P1 Legendre coefficient can be re-scaled by the factor command

2021-01-30  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/dece.cpp (DeceMain): modified
	-s option print header data too

2021-01-29  KAWANO Toshihiko  <kawano@lanl.gov>
