@@ -1,7 +1,8 @@
 2021-06-30  Toshihiko Kawano  <kawano@lanl.gov>
 
 	* source/groupstructure.h: updated
-	LANL 618 group structure added
+	* source/deceprocgroup.cpp (DeceGenerateGroup): modified
+	LANL 618 group structure added as group ID = 4
 
 2021-05-10  KAWANO Toshihiko  <kawano@lanl.gov>
 
